--- a/static/morse.css
+++ b/static/morse.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+@font-face {
+    font-family: "Timebomb";
+    src: url(assets/fonts/TickingTimebombBB.ttf);
+    font-weight: normal;
+}
 
 * {
     box-sizing: border-box;
@@ -7,58 +14,152 @@
 
 body {
     margin: 0;
-    background: linear-gradient(#d9e2ec, #dfdfdf);
-    color: #333;
     min-height: 100vh;
+    background-image: url('../static/assets/aluminium-bg.jpg');
+    background-size: cover;
 }
 
 .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 2rem;
+    min-height:100vh;
+    background-color: #ececec;
+    box-shadow: 1px 1px 50px 20px #00000018;
 }
 
 header {
+    color:white;
     text-align: center;
     margin-bottom: 2rem;
 }
 
 header h1 {
+    background-color: #333;
     margin: 0;
+    font-family: "Space Mono";
     font-size: 2.5rem;
 }
 
 header h2 {
+    background-color: #333;
     margin: 0.5rem 0 1rem;
     font-size: 1.8rem;
     font-weight: normal;
+    font-family: "Space Mono";
 }
 
 .instructions {
     text-align: center;
-    background: linear-gradient(135deg, #d38124, #a76419);
-    color: white;
-    width: 80%;
-    margin: 1rem auto;
-    padding: 1rem;
-    border-radius: 1rem;
-    transition: transform 0.1s ease-in-out;
+    border-radius: 2vh;
+    padding:3vh;
+    font-family: "Timebomb";
+    font-size: x-large;
+    border-bottom: 1px solid #b6b6b6;
+    border-top: 1px solid #b6b6b6;
 }
 
-.instructions:hover {
-    transform: scale(1.05);
+.info {
+    font-family: "Space Mono";
+    font-size: 1rem;
+    text-align: center;
+}
+
+.cheatsheet-btn {
+    display: block;
+    margin:auto;
+    margin: 2vh auto 2vh auto;
+    padding:1vh;
+    padding-left:5vh;
+    padding-right:5vh;
+    font-family: "Timebomb";
+    font-size: x-large;
+    border:none;
+    box-shadow: 2px 2px 3px #aaa,
+    inset 1px 1px 3px #eee,
+    -2px -2px 3px #fff;
+    color: #4e4e4e;
+    border-radius: 1vh;
+    transition: 0.1s ease-in-out
+}
+
+.cheatsheet-btn:hover {
+    transform: scale(1.1);
+    background-color: #eee;
+}
+
+.cheatsheet {
+    position:absolute;
+    height: 100%;
+    width: 100%;
+    top:0%;
+    left:0;
+    background-color: #0000003f;
+    display:grid;
+    align-items: center;
+}
+
+.top-cheatsheet {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cheatsheet-container {
+    display: block;
+    width:50%;
+    height:90%;
+    margin: 0 auto;
+    padding: 1rem;
+    background-color: #f7f7f7;
+    border-radius: 2vh;
+    box-shadow: 0px 0px 10px 5px #00000018;
+}
+
+.cheatsheet-container .close {
+    position:relative;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+
+.close:hover {
+    cursor:pointer;
+}
+
+.cheatsheet-container h2 {
+    position:relative;
+    margin:0 auto;
+    text-align: center;
+    font-family: "Space Mono";
+}
+
+.morse-codes-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    margin-top: 1rem;
+}
+
+.letter {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.25rem;
+    padding: 0.5rem;
+    border-radius: 1vh;
+    box-shadow: 2px 2px 3px #aaa,
+    inset 1px 1px 3px #eee,
+    -2px -2px 3px #fff;
 }
 
 .key {
-    background-color: #aaa;
-    border-radius: 0.5rem;
-    padding: 0.2rem 0.5rem;
-    box-shadow: 2px 2px #333;
-    transition: box-shadow 0.1s ease-in-out;
-}
-
-.key:hover {
-    box-shadow: inset 2px 2px #333;
+    font-family: "Space Mono";
+    font-weight: bolder;
+    color: white;
+    padding:0.5vh;
+    background-color: #b84747;
+    border-radius: 0.5vh;
+    box-shadow: inset -2px -2px 1px #0000001a;
 }
 
 .checkbox {
@@ -66,39 +167,51 @@ header h2 {
     margin: 1rem 0;
 }
 
-svg {
-    display:block;
-    margin: auto;
-}
-
 .dictate {
     display:grid;
-    height:100%;
     align-items: center;
     justify-content: center;
+    padding:2vh;
+    /* background-image: linear-gradient(135deg, #fff, #f1f1f1); */
+    background-color: #f7f7f7;
+    border-radius: 2vh;
+    box-shadow: inset 2px 2px 1px #aaa, 
+    inset -2px -2px 2px #fff;
 }
 
 .dictate span {
-    font-family: monospace;
+    color: #4e4e4e;
+    font-family: "Timebomb";
     font-size: 6vh;
-}
-
-/* Keep existing SVG styling intact */
-svg {
-    width: 500px;
-    height: 100px;
 }
 
 canvas#morse-canvas {
     display: block;
-    margin: 1rem auto;
-    background: #fff;
+    margin:0 auto;
+    margin-top: 5vh;
+    background-image: linear-gradient(90deg, #ececec, #fff, #ececec);
     width: 90%;
     height: 100px;
     border-radius: 0.5rem;
+    box-shadow: inset 2px 2px 1px #aaa,
+    inset -1px -1px 1px #eee,;
 }
 
 /* Hide audio element if added later */
 audio {
     display: none;
+}
+
+.morse-written {
+    margin-top: 1vh;
+    text-align: center;
+    font-family: "Space Mono";
+    font-size: x-large;
+}
+
+.morse-decoded {
+    margin-top: 1vh;
+    text-align: center;
+    font-family: "Timebomb";
+    font-size: xx-large;
 }
