--- a/templates/ligma.html
+++ b/templates/ligma.html
@@ -797,7 +797,7 @@
             const address = document.getElementById('address').value;
             const pizzaDetails = document.getElementById('pizzaDetails').value;
 
-            const dominosUrl = `https://www.dominos.ma/order`;
+            const dominosUrl = `https://www.dominos.ma/fr/pages/order/#!/locations/search/?type=Delivery`;
             alert(`Redirecting to Domino's Morocco to complete your order.`);
             window.location.href = dominosUrl;
         }
