--- a/templates/ligma.html
+++ b/templates/ligma.html
@@ -172,6 +172,18 @@
         .format-button.useful:hover {
             background-color: #2bc296;
         }
+
+        .innerForm {
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            margin:auto;
+            width: 50%;
+            gap:1rem;
+        }
+
+        #dominosOrder {
+            margin-top: 3vh;
+        }
     </style>
 </head>
 <body>
@@ -251,20 +263,23 @@
     </div>
 
     <button onclick="showDominosOrderForm()">Place Order</button>
+
     <div id="dominosOrder" style="display: none;">
-        <h3>Complete Your Order with Domino's Morocco</h3>
+        <h3>Complete Your Order with Domino's Morocco</h3><br>
         <form id="dominosForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required><br><br>
+            <div class="innerForm">
+                <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
     
             <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone" required><br><br>
+            <input type="tel" id="phone" name="phone" required>
     
             <label for="address">Delivery Address:</label>
-            <input type="text" id="address" name="address" required><br><br>
+            <input type="text" id="address" name="address" required>
     
             <label for="pizzaDetails">Pizza Details:</label>
-            <textarea id="pizzaDetails" name="pizzaDetails" readonly></textarea><br><br>
+            <textarea id="pizzaDetails" name="pizzaDetails" readonly></textarea>
+            </div>
     
             <button type="button" onclick="redirectToDominos()">Place Order on Domino's Website</button>
         </form>
